Media Query was added to the Features Section.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="imgs/favicon.png" type="image/png">
     <title>MercanSoft</title>
 </head>
 <body>
@@ -100,34 +99,46 @@
             </div>
             <div class="sec-features-bottom">
                 <div class="sec-features-feature">
-                    <i class="sec-features-icon fas fa-laptop-code"></i>
-                    <h2 class="t3">Lorem, ipsum dolor.</h2>
-                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                    <svg class="sec-features-icon">
+                        <use xlink:href="./imgs/sprite.svg#monitor"></use>
+                    </svg>
+                    <h2 class="sec-features-title t3">Lorem, ipsum dolor.</h2>
+                    <p class="sec-features-desc s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias.</p>
                 </div>
                 <div class="sec-features-feature">
-                    <i class="sec-features-icon fas fa-laptop-house"></i>
-                    <h2 class="t3">Lorem, ipsum dolor.</h2>
-                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                    <svg class="sec-features-icon">
+                        <use xlink:href="./imgs/sprite.svg#working-at-home"></use>
+                    </svg>
+                    <h2 class="sec-features-title t3">Lorem, ipsum dolor.</h2>
+                    <p class="sec-features-desc s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias.</p>
                 </div>
                 <div class="sec-features-feature">
-                    <i class="sec-features-icon fas fa-search-location"></i>
-                    <h2 class="t3">Lorem, ipsum dolor.</h2>
-                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                    <svg class="sec-features-icon">
+                        <use xlink:href="./imgs/sprite.svg#search"></use>
+                    </svg>
+                    <h2 class="sec-features-title t3">Lorem, ipsum dolor.</h2>
+                    <p class="sec-features-desc s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias.</p>
                 </div>
                 <div class="sec-features-feature">
-                    <i class="sec-features-icon fas fa-globe"></i>
-                    <h2 class="t3">Lorem, ipsum dolor.</h2>
-                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                    <svg class="sec-features-icon">
+                        <use xlink:href="./imgs/sprite.svg#global"></use>
+                    </svg>
+                    <h2 class="sec-features-title t3">Lorem, ipsum dolor.</h2>
+                    <p class="sec-features-desc s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias.</p>
                 </div>
                 <div class="sec-features-feature">
-                    <i class="sec-features-icon fas fa-mobile-alt"></i>
-                    <h2 class="t3">Lorem, ipsum dolor.</h2>
-                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                    <svg class="sec-features-icon">
+                        <use xlink:href="./imgs/sprite.svg#smartphone"></use>
+                    </svg>
+                    <h2 class="sec-features-title t3">Lorem, ipsum dolor.</h2>
+                    <p class="sec-features-desc s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias.</p>
                 </div>
                 <div class="sec-features-feature">
-                    <i class="sec-features-icon fas fa-server"></i>
-                    <h2 class="t3">Lorem, ipsum dolor.</h2>
-                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                    <svg class="sec-features-icon">
+                        <use xlink:href="./imgs/sprite.svg#server"></use>
+                    </svg>
+                    <h2 class="sec-features-title t3">Lorem, ipsum dolor.</h2>
+                    <p class="sec-features-desc s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias.</p>
                 </div>
             </div>
         </section>
