--- a/index.html
+++ b/index.html
@@ -147,26 +147,26 @@
         <section class="sec-workflow">
             <div class="sec-workflow-top">
                 <h1 class="t2">section workflow</h1>
-                <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
+                <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni!</p>
             </div>
             <div class="sec-workflow-bottom">
                 <div class="sec-workflow-left">
                     <div class="sec-workflow-box">
                         <h2 class="sec-workflow-heading t3 text-right">box make a speech</h2>
-                        <img class="sec-workflow-icon f-right" src="imgs/workflow1.png" />
-                        <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                        <img class="sec-workflow-icon f-right right" src="imgs/workflow1.png" />
+                        <p class="sec-workflow-text s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
                         <h2 class="sec-workflow-heading t3 text-right">Box check missions</h2>
-                        <img class="sec-workflow-icon f-right" src="imgs/workflow2.png" />
-                        <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                        <img class="sec-workflow-icon f-right right" src="imgs/workflow2.png" />
+                        <p class="sec-workflow-text s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
                         <h2 class="sec-workflow-heading t3 text-right">box develop an app</h2>
-                        <img class="sec-workflow-icon f-right" src="imgs/workflow3.png" />
-                        <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                        <img class="sec-workflow-icon f-right right" src="imgs/workflow3.png" />
+                        <p class="sec-workflow-text s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                 </div>
                 <div class="sec-workflow-flow">
@@ -182,14 +182,14 @@
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
                         <h2 class="sec-workflow-heading t3">box task sharing</h2>
-                        <img class="sec-workflow-icon" src="imgs/workflow4.png" />
-                        <p class="s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                        <img class="sec-workflow-icon left" src="imgs/workflow4.png" />
+                        <p class="sec-workflow-text s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
                         <h2 class="sec-workflow-heading t3">box work with us</h2>
-                        <img class="sec-workflow-icon" src="imgs/workflow5.png" />
-                        <p class="s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                        <img class="sec-workflow-icon left" src="imgs/workflow5.png" />
+                        <p class="sec-workflow-text s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                 </div>
