--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="sec-counter-container">
                 <div class="sec-counter-top">
                     <h1 class="t2">section counter</h1>
-                    <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
+                    <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi adipisci soluta maiores quidem placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
                 </div>
                 <div class="sec-counter-bottom">
                     <div class="counter">
@@ -209,28 +209,28 @@
                             <use xlink:href="./imgs/sprite.svg#user"></use>
                         </svg>
                         <span class="counter-num">155</span>
-                        <p class="counter-name">Lorem, ipsum dolor.</p>
+                        <p class="counter-name">happy customer.</p>
                     </div>
                     <div class="counter">
                         <svg class="counter-icon">
                             <use xlink:href="./imgs/sprite.svg#checklist"></use>
                         </svg>
                         <span class="counter-num">125</span>
-                        <p class="counter-name">Lorem, ipsum dolor.</p>
+                        <p class="counter-name">completed project.</p>
                     </div>
                     <div class="counter">
                         <svg class="counter-icon">
                             <use xlink:href="./imgs/sprite.svg#customer-1"></use>
                         </svg>
                         <span class="counter-num">38</span>
-                        <p class="counter-name">Lorem, ipsum dolor.</p>
+                        <p class="counter-name">reference.</p>
                     </div>
                     <div class="counter">
                         <svg class="counter-icon">
                             <use xlink:href="./imgs/sprite.svg#customer"></use>
                         </svg>
                         <span class="counter-num">46</span>
-                        <p class="counter-name">Lorem, ipsum dolor.</p>
+                        <p class="counter-name">active customer.</p>
                     </div>
                 </div>
                 <button class="btn btn-primary btn-middle"><span>Details</span><span>Details</span></button>
