Media Queries were added to the Comment Section.

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <img class="comment-img" src="imgs/profile1.jpg" alt="profile1">
                     <div class="comment-shadow">
                         <div class="comment-content">
-                            <div class="comment-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!</div>
+                            <div class="comment-text">Lorem ipsum, dolor sit amet consectet adipisic elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobi eligend tempo dic? Exceptu xecitationem voluptates obcaecati ad iusto sit architecto!</div>
                             <div class="comment-author">-M.Loremy</div>
                         </div>
                     </div>
@@ -332,10 +332,7 @@
                     <img class="comment-img" src="imgs/profile2.jpg" alt="profile2">
                     <div class="comment-shadow">
                         <div class="comment-content">
-                            <div class="comment-text">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!
-                            </div>
-                            <div class="comment-author">-F.Suezen</div>
+                            <div class="comment-text">Lorem ipsum, dolor sit amet consectet adipisic elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobi eligend tempo dic? Exceptu xecitationem voluptates obcaecati ad iusto sit architecto!</div>                            <div class="comment-author">-F.Suezen</div>
                         </div>
                     </div>
                 </div>
@@ -343,9 +340,7 @@
                     <img class="comment-img" src="imgs/profile3.jpg" alt="profile3">
                     <div class="comment-shadow">
                         <div class="comment-content">
-                            <div class="comment-text">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!
-                            </div>
+                            <div class="comment-text">Lorem ipsum, dolor sit amet consectet adipisic elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobi eligend tempo dic? Exceptu xecitationem voluptates obcaecati ad iusto sit architecto!</div>        
                             <div class="comment-author">-D.Gathema</div>
                         </div>
                     </div>
@@ -354,9 +349,7 @@
                     <img class="comment-img" src="imgs/profile4.jpg" alt="profile4">
                     <div class="comment-shadow">
                         <div class="comment-content">
-                            <div class="comment-text">
-                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!
-                            </div>
+                            <div class="comment-text">Lorem ipsum, dolor sit amet consectet adipisic elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobi eligend tempo dic? Exceptu xecitationem voluptates obcaecati ad iusto sit architecto!</div>
                             <div class="comment-author">-R.Folculm</div>
                         </div>
                     </div>
