--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="container">
 <!-- header -->
         <header class="header">
-            <img  
+            <a href="index.html"><img  
                 class="header-brand" 
                 srcset="./imgs/logo-big.png 205w, ./imgs/logo-small.png 180w" 
                 sizes="(min-width: 1024px) 205px, 180px"
                 src="imgs/logo-big.png" 
                 alt="brand"
-            />
+            /></a>
             <div class="navbar">
                 <input class="navbar-checkbox" type="checkbox" id="checkbox">
                 <label class="navbar-button" for="checkbox">
@@ -25,23 +25,23 @@
                 </label>
                 <nav class="nav-top">             
                     <ul class="nav-top-list">
-                        <li class="nav-top-item"><a href="index.html" class="nav-top-link">Home</a></li>
-                        <li class="nav-top-item"><a href="#" class="nav-top-link">About</span></a></li>
-                        <li class="nav-top-item"><a href="#" class="nav-top-link">Services</a></li>
-                        <li class="nav-top-item"><a href="#" class="nav-top-link">Referances</a></li>
-                        <li class="nav-top-item"><a href="#" class="nav-top-link">Blog</a></li>
-                        <li class="nav-top-item"><a href="#" class="nav-top-link">Contact</a></li>
+                        <li class="nav-top-item"><a href="#info" class="nav-top-link">info</span></a></li>
+                        <li class="nav-top-item"><a href="#features" class="nav-top-link">features</a></li>
+                        <li class="nav-top-item"><a href="#workflow" class="nav-top-link">workflow</a></li>
+                        <li class="nav-top-item"><a href="#counter" class="nav-top-link">counter</a></li>
+                        <li class="nav-top-item"><a href="#card" class="nav-top-link">card</a></li>
+                        <li class="nav-top-item"><a href="#comment" class="nav-top-link">comment</a></li>
                     </ul> 
                     <button class="nav-top-btn btn btn-primary "><span>login</span><span>login</span></button>
                 </nav>                
                 <nav class="nav-bottom">                
                     <ul class="nav-bottom-list">
-                        <li class="nav-bottom-item"><a href="index.html" class="nav-bottom-link">Home</a></li>
-                        <li class="nav-bottom-item"><a href="#" class="nav-bottom-link">About</a></li>
-                        <li class="nav-bottom-item"><a href="#" class="nav-bottom-link">Services</a></li>
-                        <li class="nav-bottom-item"><a href="#" class="nav-bottom-link">Referances</a></li>
-                        <li class="nav-bottom-item"><a href="#" class="nav-bottom-link">Blog</a></li>
-                        <li class="nav-bottom-item"><a href="#" class="nav-bottom-link">Contact</a></li>
+                        <li class="nav-bottom-item"><a href="#info" class="nav-bottom-link">info</a></li>
+                        <li class="nav-bottom-item"><a href="#features" class="nav-bottom-link">features</a></li>
+                        <li class="nav-bottom-item"><a href="#workflow" class="nav-bottom-link">workflow</a></li>
+                        <li class="nav-bottom-item"><a href="#counter" class="nav-bottom-link">counter</a></li>
+                        <li class="nav-bottom-item"><a href="#card" class="nav-bottom-link">card</a></li>
+                        <li class="nav-bottom-item"><a href="#comment" class="nav-bottom-link">comment</a></li>
                     </ul>
                     <button class="nav-bottom-btn btn btn-primary btn-middle"><span>login</span><span>login</span></button>
                 </nav>
@@ -68,7 +68,7 @@
         </header>
 <!-- header -->
 <!-- section 1 -->
-        <section class="sec-info">
+        <section id="info" class="sec-info">
             <div class="sec-info-container">
                 <div class="sec-info-left">
                     <h1 class="t1">
@@ -92,7 +92,7 @@
         </section>
 <!-- section 1 -->
 <!-- section 2 -->
-        <section class="sec-features">
+        <section id="features" class="sec-features">
             <div class="sec-features-top">
                 <h1 class="t2 sec-features-heading">section features</h1>
                 <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
@@ -144,7 +144,7 @@
         </section>
 <!-- section 2 -->
 <!-- section 3 -->
-        <section class="sec-workflow">
+        <section id="workflow" class="sec-workflow">
             <div class="sec-workflow-top">
                 <h1 class="t2">section workflow</h1>
                 <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni!</p>
@@ -197,7 +197,7 @@
         </section>
 <!-- section 3 -->
 <!-- section 4 -->
-        <section class="sec-counter">
+        <section id="counter" class="sec-counter">
             <div class="sec-counter-container">
                 <div class="sec-counter-top">
                     <h1 class="t2">section counter</h1>
@@ -238,7 +238,7 @@
         </section>
 <!-- section 4 -->
 <!-- section 5 -->
-        <section class="sec-card">
+        <section id="card" class="sec-card">
             <h1 class="t2 t2-primary">section card</h1>
             <div class="sec-card-cards">
                 <div class="card">
@@ -314,7 +314,7 @@
         </section>
 <!-- section 6 -->
 <!-- section 7 -->
-        <section class="sec-comment">
+        <section id="comment" class="sec-comment">
             <div class="sec-comment-top">
                 <h1 class="t2 t2-white">Lorem, ipsum dolor.</h1>
             </div>
